# Thermal_app

./: .gitignore  README.md  bpc_map.txt
cpp/: CMakeLists.txt
cpp/include/: bad_pixel.h  display.h  frame_io.h  overlay.h  processor.h  recorder.h
cpp/src/: bad_pixel.cpp  display.cpp  frame_io.cpp  main.cpp  overlay.cpp  processor.cpp  recorder.cpp
